--- a/projects/abel-sdk-v2/package.json
+++ b/projects/abel-sdk-v2/package.json
@@ -42,7 +42,8 @@
   },
   "peerDependencies": {
     "@algorandfoundation/algokit-utils": "^7.0.2",
-    "algosdk": "^2.8.0"
+    "algosdk": "^2.8.0",
+    "p-map": "^7.0.3"
   },
   "type": "module"
 }
