--- a/projects/abel-sdk-v2/package.json
+++ b/projects/abel-sdk-v2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "abel-sdk-v2",
+  "name": "@abels/sdk",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
@@ -27,6 +27,7 @@
   },
   "scripts": {
     "clean": "rm -rf dist/ artifacts/ src/generated/",
+    "docs": "typedoc",
     "prebuild": "npm run clean && scripts/update-artifacts.sh",
     "build": "tsc",
     "prepublishOnly": "npm run build",
@@ -38,6 +39,7 @@
     "@algorandfoundation/algokit-client-generator": "^4.0.9",
     "@types/node": "^22.13.17",
     "buffer": "^6.0.3",
+    "typedoc": "^0.27.0",
     "tsx": "^4.19.3"
   },
   "peerDependencies": {
