--- a/projects/asset_labeling-frontend/package.json
+++ b/projects/asset_labeling-frontend/package.json
@@ -25,8 +25,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "playwright": "^1.35.0",
-    "postcss": "^8.4.24",
-    "tailwindcss": "3.3.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
@@ -34,11 +32,13 @@
     "vite-plugin-node-polyfills": "^0.22.0"
   },
   "dependencies": {
-    "@algorandfoundation/algokit-utils": "7.1.0",
+    "@algorandfoundation/algokit-utils": "^7.1.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.1",
+    "@mui/x-data-grid": "^7.28.3",
     "abel-sdk": "^0.0.2",
     "algosdk": "^2.9.0",
-    "daisyui": "^4.0.0",
-    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tslib": "^2.6.2"
