--- a/projects/asset_labeling-frontend/package.json
+++ b/projects/asset_labeling-frontend/package.json
@@ -35,6 +35,7 @@
     "@algorandfoundation/algokit-utils": "^7.1.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@mui/x-data-grid": "^7.28.3",
     "abel-sdk": "^0.0.2",
