cli: download pera verified list, added more clients

--- a/projects/abel-cli/package.json
+++ b/projects/abel-cli/package.json
@@ -4,15 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@algorandfoundation/algokit-utils": "^7.0.2",
     "abel-sdk": "../abel-sdk-v2",
-    "algosdk": "^2.8.0",
     "dotenv": "^16.4.7",
     "p-map": "^7.0.3",
     "zod": "^3.24.2"
@@ -21,5 +20,9 @@
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@types/yargs": "^17.0.33"
+  },
+  "peerDependencies": {
+    "@algorandfoundation/algokit-utils": "^7.0.2",
+    "algosdk": "^2.8.0"
   }
 }
