docs with tsdoc, first pass

--- a/projects/abel-sdk-v2/package.json
+++ b/projects/abel-sdk-v2/package.json
@@ -38,7 +38,8 @@
     "@algorandfoundation/algokit-client-generator": "^4.0.9",
     "@types/node": "^22.13.17",
     "buffer": "^6.0.3",
-    "tsx": "^4.19.3"
+    "tsx": "^4.19.3",
+    "typedoc": "^0.28.2"
   },
   "peerDependencies": {
     "@algorandfoundation/algokit-utils": "^7.0.2",
