--- a/projects/abel-sdk-v2/package.json
+++ b/projects/abel-sdk-v2/package.json
@@ -28,12 +28,13 @@
   "scripts": {
     "clean": "rm -rf dist/ artifacts/ src/generated/",
     "prebuild": "npm run clean && scripts/update-artifacts.sh",
+    "docs": "typedoc",
     "build": "tsc",
     "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@algorandfoundation/algokit-client-generator": "^4.0.9",
     "@types/node": "^22.13.17",
