--- a/projects/asset_labeling-contracts/package.json
+++ b/projects/asset_labeling-contracts/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Smart contract deployer",
   "main": "index.ts",
+  "license": "MIT",
   "scripts": {
     "deploy": "ts-node-dev --transpile-only --watch .env -r dotenv/config smart_contracts/index.ts",
     "deploy:ci": "ts-node --transpile-only -r dotenv/config smart_contracts/index.ts",
